--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       const json = JSON.stringify(object);
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbza0SzCzHGkzdWAU2A3xQPo2y3IZIG-AMf-xWRN0Y2NBZ5pV2jJDXglSlIK2pEkRsDx/exec', { // Thay đổi URL tương ứng với máy chủ của bạn
+        const response = await fetch('/submit', { // Thay đổi URL tương ứng với máy chủ của bạn
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
